ksqldb/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ksqldb
  namespace: kafka
spec:
  ports:
  - port: 8088
    targetPort: 8088
  selector:
    app: ksqldb
