ksqldb/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ksqldb
  namespace: kafka
  annotations:
    acme.cert-manager.io/http01-edit-in-place: 'true'
    cert-manager.io/cluster-issuer: letsencrypt
    cert-manager.io/issue-temporary-certificate: 'true'
    nginx.ingress.kubernetes.io/auth-realm: Authentication Required - ksqldb
    nginx.ingress.kubernetes.io/auth-secret: ksqldb-basic-auth
    nginx.ingress.kubernetes.io/auth-type: basic
spec:
  ingressClassName: nginx
  rules:
    - host: ksqldb.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ksqldb
                port:
                  number: 8088
  tls:
    - hosts:
        - ksqldb.example.com
      secretName: ksqldb-tls
